tests/cases/scc/error/0012-ifnoexpr.c
//!necc-dbg @ -as
#if
#endif

